--- a/wSoftSGSST/bin/wSoftSGSST.dll.config
+++ b/wSoftSGSST/bin/wSoftSGSST.dll.config
@@ -5,13 +5,24 @@
   -->
 <configuration>
   <configSections>
-    <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=5.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true" />
+    <!--<section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data, Version=6.0.1304.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" requirePermission="true"/>-->
+    <section name="dataConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Data.Configuration.DatabaseSettings, Microsoft.Practices.EnterpriseLibrary.Data"/>
   </configSections>
-  <dataConfiguration defaultDatabase="cnnBDCentroErgonomia" />
+  <dataConfiguration defaultDatabase="cnnBDSGSST" />
   <connectionStrings>
-    <add name="cnnBDCentroErgonomia" connectionString="data source=(local);INITIAL CATALOG=SoftCentroErgonomia;USER ID=sa;PWD=sqlS3rv3r" providerName="System.Data.SqlClient" />
+    <add name="cnnBDSGSST" connectionString="data source=(local)\sql2008;INITIAL CATALOG=softSGSST;USER ID=userSGSST;PWD=tmp" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <httpRuntime maxRequestLength="102400" executionTimeout="3600" requestValidationMode="2.0" targetFramework="4.5"/>
+    <authentication mode="Forms">
+      <forms name=".AComGoBO" loginUrl="login.aspx" defaultUrl="default.aspx" protection="All" timeout="30" path="/" requireSSL="false" slidingExpiration="true" cookieless="UseDeviceProfile" domain="" enableCrossAppRedirects="true">
+        <credentials passwordFormat="SHA1"/>
+      </forms>
+    </authentication>
+    <authorization>
+      <deny users="?"/>
+      <allow users="*"/>
+    </authorization>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5">
       <assemblies>
         <add assembly="System.Design, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
@@ -20,7 +31,6 @@
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.5" />
   <pages>
       <controls>
         <add tagPrefix="ajaxToolkit" assembly="AjaxControlToolkit" namespace="AjaxControlToolkit" />
