Inclusion imagenes Botones

--- a/wSoftSGSST/wSoftSGSST.vbproj
+++ b/wSoftSGSST/wSoftSGSST.vbproj
@@ -98,6 +98,13 @@
     <Content Include="css\alertify.default.css" />
     <Content Include="frmPrincMenuPrincipal.aspx" />
     <Content Include="frmPrincPrimerIngreso.aspx" />
+    <Content Include="Images\Botones\ibtnRequisitosAzul.png" />
+    <Content Include="Images\Botones\ibtnRelNuevoCargoAzul.png" />
+    <Content Include="Images\Botones\ibtnHistoricoAzul.png" />
+    <Content Include="Images\Botones\ibtnGuardarCargoVerde.png" />
+    <Content Include="Images\Botones\ibtnEditarInfoAzul.png" />
+    <Content Include="Images\Botones\ibtnNuevoProfesiograma.png" />
+    <Content Include="Images\Botones\ibtnAgregarActRiesgos.png" />
     <Content Include="Images\Botones\ibtnVerDetalleVerde.png" />
     <Content Include="Images\Botones\ibtnGuardarInfoVerde.png" />
     <Content Include="Images\Botones\ibtnAgregarVerde.png" />
@@ -107,11 +114,15 @@
     <Content Include="Images\Botones\ibtnDescartarAzul.png" />
     <Content Include="Images\Botones\ibtnCerrarAzul.png" />
     <Content Include="Images\Botones\ibtnCargarAzul.png" />
-    <Content Include="Images\Botones\imBtnAgregarAzul.png" />
-    <Content Include="Images\Botones\imBtnIngresarAzul.png" />
+    <Content Include="Images\Botones\ibtnAgregarAzul.png" />
+    <Content Include="Images\Botones\ibtnIngresarAzul.png" />
+    <Content Include="Images\Botones\ibtnNuevaConsulta.png" />
+    <Content Include="Images\General\ibtnCerrarModal.png" />
     <Content Include="Images\General\ibtnBuscar.png" />
     <Content Include="Images\General\ibtnRegValido.png" />
-    <Content Include="Images\General\icono_noEncontrado_buscador.fw.png" />
+    <Content Include="Images\General\ibtnRegNoValido.png" />
+    <Content Include="Images\General\ibtnRefrescar.png" />
+    <Content Include="Images\General\imAgregarFoto.png" />
     <Content Include="Images\General\imLoading.gif" />
     <Content Include="Images\Login\imUsuarioIngreso.png" />
     <Content Include="Images\Login\imPswdIngreso.png" />
@@ -120,6 +131,14 @@
     <Content Include="Images\Maestra\imApp.png" />
     <Content Include="Images\Maestra\imLogoEmpresa.png" />
     <Content Include="Images\Msj\imAdvertencia.png" />
+    <Content Include="Images\OpcPagina\ibtnRiesgosCargoAzul.png" />
+    <Content Include="Images\OpcPagina\ibtnRiesgosCargoGris.png" />
+    <Content Include="Images\OpcPagina\ibtnInfoLaboralAzul.png" />
+    <Content Include="Images\OpcPagina\ibtnInfoLaboralGris.png" />
+    <Content Include="Images\OpcPagina\ibtnConceptoMedicoAzul.png" />
+    <Content Include="Images\OpcPagina\ibtnConceptoMedicoGris.png" />
+    <Content Include="Images\OpcPagina\ibtnAccLaboralesAzul.png" />
+    <Content Include="Images\OpcPagina\ibtnAccLaboralesGris.png" />
     <Content Include="Images\OpcPagina\ibtnRiesgosGris.png" />
     <Content Include="Images\OpcPagina\ibtnRiesgosAzul.png" />
     <Content Include="Images\OpcPagina\ibtnRespSGSSTGris.png" />
