--- a/wSoftSGSST/bin/wSoftSGSST.dll.config
+++ b/wSoftSGSST/bin/wSoftSGSST.dll.config
@@ -10,8 +10,13 @@
   </configSections>
   <dataConfiguration defaultDatabase="cnnBDSGSST" />
   <connectionStrings>
-    <add name="cnnBDSGSST" connectionString="data source=(local)\sql2008;INITIAL CATALOG=softSGSST;USER ID=userSGSST;PWD=tmp" providerName="System.Data.SqlClient" />
+    <add name="cnnBDSGSST" connectionString="data source=(local)\sql2012;INITIAL CATALOG=SoftSGSST;USER ID=userSGSST;PWD=tmp" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="strFormatoFecha" value="dd/MM/yyyy"/>
+    <add key="strSeparaFecha" value="/"/>
+    <add key="strSeparaDecimal" value="."/>
+  </appSettings>
   <system.web>
     <httpRuntime maxRequestLength="102400" executionTimeout="3600" requestValidationMode="2.0" targetFramework="4.5"/>
     <authentication mode="Forms">
