--- a/wSoftSGSST/wSoftSGSST.vbproj
+++ b/wSoftSGSST/wSoftSGSST.vbproj
@@ -92,6 +92,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Themes\SoftSGSST.css" />
+    <Content Include="css\Menu\bootstrap-treeview.css" />
+    <Content Include="css\Menu\bootstrap.min.css" />
     <Content Include="Ctr\ctrFecha.ascx" />
     <Content Include="Ctr\ctrLoading.ascx" />
     <Content Include="css\alertify.bootstrap.css" />
@@ -135,6 +137,7 @@
     <Content Include="Images\Login\imLogoCliente.png" />
     <Content Include="Images\Maestra\imApp.png" />
     <Content Include="Images\Maestra\imLogoEmpresa.png" />
+    <Content Include="Images\Menu\imMenuPlanear.fw.png" />
     <Content Include="Images\Msj\imAdvertencia.png" />
     <Content Include="Images\OpcPagina\ibtnRiesgosCargoAzul.png" />
     <Content Include="Images\OpcPagina\ibtnRiesgosCargoGris.png" />
@@ -157,7 +160,11 @@
     <Content Include="js\alertify.js" />
     <Content Include="js\alertify.min.js" />
     <Content Include="js\jquery-1.8.3.min.js" />
+    <Content Include="js\jquery-1.9.1.js" />
+    <Content Include="js\jquery-3.0.0.min.js" />
     <Content Include="js\jsapi.js" />
+    <Content Include="js\Menu\bootstrap-treeview.js" />
+    <Content Include="js\Menu\bootstrap.js" />
     <Content Include="login.aspx" />
     <Content Include="Planear\Ctr\ctrCargosEmpleado.ascx" />
     <Content Include="Planear\Ctr\ctrInfoEmpleado.ascx" />
