--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/slnSoftSGSST/v14/.suo
+/.vs/config/applicationhost.config
