--- a/wSoftSGSST/wSoftSGSST.vbproj
+++ b/wSoftSGSST/wSoftSGSST.vbproj
@@ -168,9 +168,11 @@
     <Content Include="js\Menu\bootstrap-treeview.js" />
     <Content Include="js\Menu\bootstrap.js" />
     <Content Include="login.aspx" />
+    <Content Include="Planear\Ctr\AutoCompleteBusCargo.asmx" />
+    <Content Include="Planear\Ctr\AutoCompleteBusEmpleado.asmx" />
     <Content Include="Planear\Ctr\ctrCargosEmpleado.ascx" />
     <Content Include="Planear\Ctr\ctrInfoEmpleado.ascx" />
-    <Content Include="Planear\Ctr\srvDinaConsEmpleado.asmx" />
+    <Content Include="Planear\Ctr\ctrProfesiograma.ascx" />
     <Content Include="Planear\PerfDemografico\frmPlPerfDemografico.aspx" />
     <Content Include="Planear\Profesiograma\frmPlProfesiograma.aspx" />
     <Content Include="Web.config" />
@@ -261,6 +263,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Planear\Ctr\AutoCompleteBusCargo.asmx.vb">
+      <DependentUpon>AutoCompleteBusCargo.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Planear\Ctr\AutoCompleteBusEmpleado.asmx.vb">
+      <DependentUpon>AutoCompleteBusEmpleado.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Planear\Ctr\ctrCargosEmpleado.ascx.designer.vb">
       <DependentUpon>ctrCargosEmpleado.ascx</DependentUpon>
     </Compile>
@@ -275,9 +285,12 @@
       <DependentUpon>ctrInfoEmpleado.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Planear\Ctr\srvDinaConsEmpleado.asmx.vb">
-      <DependentUpon>srvDinaConsEmpleado.asmx</DependentUpon>
-      <SubType>Component</SubType>
+    <Compile Include="Planear\Ctr\ctrProfesiograma.ascx.designer.vb">
+      <DependentUpon>ctrProfesiograma.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Planear\Ctr\ctrProfesiograma.ascx.vb">
+      <DependentUpon>ctrProfesiograma.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Planear\PerfDemografico\frmPlPerfDemografico.aspx.designer.vb">
       <DependentUpon>frmPlPerfDemografico.aspx</DependentUpon>
