--- a/dllSoftSGSST/dllSoftSGSST.vbproj
+++ b/dllSoftSGSST/dllSoftSGSST.vbproj
@@ -112,9 +112,9 @@
     <Compile Include="SGSST\clSgsstHistCargosEmp.vb" />
     <Compile Include="SGSST\clSgsstPais.vb" />
     <Compile Include="SGSST\clSgsstProfesion.vb" />
+    <Compile Include="SGSST\clSgsstRelCargoXQuienRepIdCargo.vb" />
     <Compile Include="SGSST\clSgsstTipoContrato.vb" />
     <Compile Include="SGSST\clSgsstTipoDocumento.vb" />
-    <Compile Include="SGSST\dtsQuienLeReportaCargo.Designer.vb" />
     <Compile Include="SGSST\dtsQuienLeReportaCargo1.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -150,9 +150,10 @@
       <DependentUpon>dtsQuienLeReportaCargo.xsd</DependentUpon>
     </None>
     <None Include="SGSST\dtsQuienLeReportaCargo.xsd">
+      <SubType>Designer</SubType>
       <Generator>MSDataSetGenerator</Generator>
       <LastGenOutput>dtsQuienLeReportaCargo1.Designer.vb</LastGenOutput>
-      <SubType>Designer</SubType>
+      <CustomToolNamespace>SGSST</CustomToolNamespace>
     </None>
     <None Include="SGSST\dtsQuienLeReportaCargo.xss">
       <DependentUpon>dtsQuienLeReportaCargo.xsd</DependentUpon>
